--- a/cv-alexandre-vidal.html
+++ b/cv-alexandre-vidal.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV - Alexandre Vidal</title>
   <meta description="name" content="Je m'appelle Alexandre Vidal, et je suis étudiant en programmation. Venez lire mon CV !">
-  <link rel="canonical" href="mon-cv.html">
+  <link rel="canonical" href="cv-alexandre-vidal.html">
+  <link rel="stylesheet" href="cv-alexandre-vidal.css">
 </head>
 
 <body>
@@ -16,73 +17,79 @@
   </header>
 
   <!-- Lien du CV -->
-  <section class="cv">
+  <section id="cv">
     <a href="cv.pdf" rel="nofollow">Mon CV au format PDF</a>
   </section>
 
-  <!-- Informations personnelles -->
-    <!-- Le numéro de téléphone et l'adresse e-mail sont cliquables -->
-  <section>
-    <h2>Informations personnelles</h2>  
-    <p>Numéro de téléphone : <a href="tel:33626232227">+33 6 26 23 22 27</a></p>
-    <p>Adresse e-mail : <a href="mailto:alexandre.vidal@laplateforme.io? subject=subject text">alexandre.vidal@laplateforme.io</a></p>
-  </section>
-  <section>
-    <p>Né le : 25 décembre 2001</p>
-    <p>Habite à : Plan-de-Cuques</p>
-    <p>Parle couramment anglais !</p>
-  </section>
+<div id="shadow">
 
-  <!-- Objectifs professionnels -->
-  <section>
-    <h2>Objectifs professionnels</h2>
-    <p>Devenir développeur web (front-end)</p>
-    <p>Devenir un programmeur polyvalent, capable de comprendre plusieurs langages de programmation</p>
-  </section>
-
-  <!-- Expérience professionnelle -->
-  <section>
-
-    <h2>Expérience professionnelle</h2>
-    <h3>Chargé de communication (alternance) :</h3>
-    <ul>
-      <li>Rédaction de publications pour les réseaux sociaux</li>
-      <li>Création et maintenance d'un blog WordPress</li>
-      <li>Rédaction d'articles</li>
-      <li>Lancement et gestion de campagnes de publicité sur Google Ads et les réseaux sociaux Meta (Facebook et Instagram)</li>
-    </ul>
-  </section>
-
-  <!-- Niveau d'étude -->
-  <section>
-    <h2>Niveau d'études</h2>
-    <ul>
-      <li>Bac L (Lycée Antonin Artaud, de 2017 à 2019)</li>
-      <li>BTS Communication (Lycée St Exupéry, de 2019 à 2021)</li>
-      <li>Niveau Bachelor Web-marketing (Lycée Charles Péguy, de 2021 à 2022, diplôme non obtenu)</li>
-    </ul>
-  </section>
-
-  <!-- Mes compétences -->
-  <section class="skills">
-    <h2>Mes compétences</h2>
+    <!-- Informations personnelles -->
+      <!-- Le numéro de téléphone et l'adresse e-mail sont cliquables -->
+  <div class="infospersos">
+    <section>
+      <h2>Informations personnelles</h2>  
+      <p>Numéro de téléphone : <a href="tel:33626232227">+33 6 26 23 22 27</a></p>
+      <p>Adresse e-mail : <a href="mailto:alexandre.vidal@laplateforme.io? subject=subject text">alexandre.vidal@laplateforme.io</a></p>
+    </section>
+    <section>
+      <p>Né le : 25 décembre 2001</p>
+      <p>Habite à : Plan-de-Cuques</p>
+      <p>Parle couramment anglais !</p>
+    </section>
+  </div>
     
-    <ul>
-      <li>Aseprite</li>
-      <li>Reaper</li>
-      <li>GIMP</li>
-      <li>Vegas Pro</li>
-      <li>WordPress</li>
-      <li>Google Ads</li>
-      <li>HTML 5</li>
-      <li>CSS 3</li>
-      <li>Bash</li>
-      <li>Github</li>
-      <li>GitKraken</li>
-      <li>Ubuntu</li>
-      <li>Visual Studio Code</li>
-    </ul>
-  </section>
+    <!-- Objectifs professionnels -->
+    <section>
+      <h2>Objectifs professionnels</h2>
+      <p>Devenir développeur web (front-end)</p>
+      <p>Devenir un programmeur polyvalent, capable de comprendre plusieurs langages de programmation</p>
+    </section>
+
+    <!-- Expérience professionnelle -->
+    <section>
+
+      <h2>Expérience professionnelle</h2>
+      <h3>Chargé de communication (alternance) :</h3>
+      <ul>
+        <li>Rédaction de publications pour les réseaux sociaux</li>
+        <li>Création et maintenance d'un blog WordPress</li>
+        <li>Rédaction d'articles</li>
+        <li>Lancement et gestion de campagnes de publicité sur Google Ads et les réseaux sociaux Meta (Facebook et Instagram)</li>
+      </ul>
+    </section>
+
+    <!-- Niveau d'étude -->
+    <section>
+      <h2>Niveau d'études</h2>
+      <ul>
+        <li>Bac L (Lycée Antonin Artaud, de 2017 à 2019)</li>
+        <li>BTS Communication (Lycée St Exupéry, de 2019 à 2021)</li>
+        <li>Niveau Bachelor Web-marketing (Lycée Charles Péguy, de 2021 à 2022, diplôme non obtenu)</li>
+      </ul>
+    </section>
+
+    <!-- Mes compétences -->
+    <section class="skills">
+      <h2>Mes compétences</h2>
+      
+      <ul>
+        <li><img src="images/aseprite.svg" alt="Aseprite">Aseprite</li>
+        <li><img src="images/reaper.png" alt="Reaper">Reaper</li>
+        <li><img src="images/gimp.svg" alt="GIMP">GIMP</li>
+        <li><img src="images/vegas.svg" alt="Vegas Pro">Vegas Pro</li>
+        <li><img src="images/wordpress.svg" alt="WordPress">WordPress</li>
+        <li><img src="images/googleads.svg" alt="Google Ads">Google Ads</li>
+        <li><img src="images/html5.svg" alt="HTML 5">HTML 5</li>
+        <li><img src="images/css3.svg" alt="CSS 3">CSS 3</li>
+        <li><img src="images/bash.svg" alt="Bash">Bash</li>
+        <li><img src="images/github.svg" alt="GitHub">GitHub</li>
+        <li><img src="images/gitkraken.svg" alt="GitKraken">GitKraken</li>
+        <li><img src="images/ubuntu.svg" alt="Ubuntu">Ubuntu</li>
+        <li><img src="images/vscode.svg" alt="Visual Studio Code">Visual Studio Code</li>
+      </ul>
+    </section>
+
+</div>
 
   <!-- Lien de ma page GitHub -->
 <footer><a href="https://github.com/alexandre-vidal/" rel="nofollow">Ma page GitHub</a></footer>
