--- a/cv-alexandre-vidal.html
+++ b/cv-alexandre-vidal.html
@@ -28,8 +28,10 @@
   <div class="infospersos">
     <section>
       <h2>Informations personnelles</h2>  
-      <p>Numéro de téléphone : <a href="tel:33626232227">+33 6 26 23 22 27</a></p>
-      <p>Adresse e-mail : <a href="mailto:alexandre.vidal@laplateforme.io? subject=subject text">alexandre.vidal@laplateforme.io</a></p>
+      <p>Numéro de téléphone :</p>
+      <p><a href="tel:33626232227">+33 6 26 23 22 27</a></p>
+      <p>Adresse e-mail :</p>
+      <p><a href="mailto:alexandre.vidal@laplateforme.io? subject=subject text">alexandre.vidal@laplateforme.io</a></p>
     </section>
     <section>
       <p>Né le : 25 décembre 2001</p>
@@ -73,19 +75,19 @@
       <h2>Mes compétences</h2>
       
       <ul>
-        <li><img src="images/aseprite.svg" alt="Aseprite">Aseprite</li>
-        <li><img src="images/reaper.png" alt="Reaper">Reaper</li>
-        <li><img src="images/gimp.svg" alt="GIMP">GIMP</li>
-        <li><img src="images/vegas.svg" alt="Vegas Pro">Vegas Pro</li>
-        <li><img src="images/wordpress.svg" alt="WordPress">WordPress</li>
-        <li><img src="images/googleads.svg" alt="Google Ads">Google Ads</li>
-        <li><img src="images/html5.svg" alt="HTML 5">HTML 5</li>
-        <li><img src="images/css3.svg" alt="CSS 3">CSS 3</li>
-        <li><img src="images/bash.svg" alt="Bash">Bash</li>
-        <li><img src="images/github.svg" alt="GitHub">GitHub</li>
-        <li><img src="images/gitkraken.svg" alt="GitKraken">GitKraken</li>
-        <li><img src="images/ubuntu.svg" alt="Ubuntu">Ubuntu</li>
-        <li><img src="images/vscode.svg" alt="Visual Studio Code">Visual Studio Code</li>
+        <li><a href="https://www.aseprite.org/" target="_blank" rel="noopener noreferrer"><img src="images/aseprite.svg" alt="Aseprite"></a></li>
+        <li><a href="https://www.reaper.fm/" target="_blank" rel="noopener noreferrer"><img src="images/reaper.png" alt="Reaper"></a></li>
+        <li><a href="https://www.gimp.org/" target="_blank" rel="noopener noreferrer"><img src="images/gimp.svg" alt="GIMP"></a></li>
+        <li><a href="https://www.vegascreativesoftware.com/fr/vegas-pro/" target="_blank" rel="noopener noreferrer"><img src="images/vegas.svg" alt="Vegas Pro"></a></li>
+        <li><a href="https://wordpress.com" target="_blank" rel="noopener noreferrer"><img src="images/wordpress.svg" alt="WordPress"></a></li>
+        <li><a href="https://ads.google.com/home/" target="_blank" rel="noopener noreferrer"><img src="images/googleads.svg" alt="Google Ads"></a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noopener noreferrer"><img src="images/html5.svg" alt="HTML 5"></a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer"><img src="images/css3.svg" alt="CSS 3"></a></li>
+        <li><a href="https://www.gnu.org/software/bash/" target="_blank" rel="noopener noreferrer"><img src="images/bash.svg" alt="Bash"></a></li>
+        <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer"><img src="images/github.svg" alt="GitHub"></a></li>
+        <li><a href="https://www.gitkraken.com/" target="_blank" rel="noopener noreferrer"><img src="images/gitkraken.svg" alt="GitKraken"></a></li>
+        <li><a href="https://ubuntu.com/" target="_blank" rel="noopener noreferrer"><img src="images/ubuntu.svg" alt="Ubuntu"></a></li>
+        <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer"><img src="images/vscode.svg" alt="Visual Studio Code"></a></li>
       </ul>
     </section>
 
