CSS re-finalisé

--- a/cv-alexandre-vidal.html
+++ b/cv-alexandre-vidal.html
@@ -18,7 +18,7 @@
 
   <!-- Lien du CV -->
   <section id="cv">
-    <a href="cv.pdf" rel="nofollow">Mon CV au format PDF</a>
+    <a href="cv.pdf" target="_blank" rel="noopener noreferrer" rel="nofollow">Mon CV au format PDF</a>
   </section>
 
 <div id="shadow">
