Ajustements des URL

--- a/cv-alexandre-vidal.html
+++ b/cv-alexandre-vidal.html
@@ -78,7 +78,7 @@
         <li><a href="https://www.aseprite.org/" target="_blank" rel="noopener noreferrer"><img src="images/aseprite.svg" alt="Aseprite"></a></li>
         <li><a href="https://medibangpaint.com/en/" target="_blank" rel="noopener noreferrer"><img src="images/medibang.png" alt="MediBang"></a></li>
         <li><a href="https://obsproject.com/" target="_blank" rel="noopener noreferrer"><img src="images/obs.svg" alt="OBS"></a></li>
-        <li><a href="https://github.com/jewalky/UltimateDoomBuilder"><img src="images/doombuilder.png" alt="DOOM Builder"></a></li>
+        <li><a href="https://github.com/jewalky/UltimateDoomBuilder" target="_blank" rel="noopener noreferrer"><img src="images/doombuilder.png" alt="DOOM Builder"></a></li>
         <li><a href="https://www.reaper.fm/" target="_blank" rel="noopener noreferrer"><img src="images/reaper.png" alt="Reaper"></a></li>
         <li><a href="https://www.gimp.org/" target="_blank" rel="noopener noreferrer"><img src="images/gimp.svg" alt="GIMP"></a></li>
         <li><a href="https://www.vegascreativesoftware.com/fr/vegas-pro/" target="_blank" rel="noopener noreferrer"><img src="images/vegas.svg" alt="Vegas Pro"></a></li>
