--- a/cv-alexandre-vidal.html
+++ b/cv-alexandre-vidal.html
@@ -97,7 +97,7 @@
 </div>
 
   <!-- Lien de ma page GitHub -->
-<footer><a href="https://github.com/alexandre-vidal/" rel="nofollow">Ma page GitHub</a></footer>
+<footer><a href="https://github.com/alexandre-vidal/" target="_blank" rel="noopener noreferrer nofollow">Ma page GitHub</a></footer>
 
 </body>
 </html>
