Ajout de pygame dans les compétences

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer"><img src="images/css3.svg" alt="CSS 3"></a></li>
         <li><a href="https://www.gnu.org/software/bash/" target="_blank" rel="noopener noreferrer"><img src="images/bash.svg" alt="Bash"></a></li>
         <li><a href="https://www.python.org/" target="_blank" rel="noopener noreferrer"><img src="images/python.svg" alt="Python"></a></li>
+        <li><a href="https://www.pygame.org/" target="_blank" rel="noopener noreferrer"><img src="images/pygame.png" alt="Pygame"></a></li>
         <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer"><img src="images/github.svg" alt="GitHub"></a></li>
         <li><a href="https://www.gitkraken.com/" target="_blank" rel="noopener noreferrer"><img src="images/gitkraken.svg" alt="GitKraken"></a></li>
         <li><a href="https://ubuntu.com/" target="_blank" rel="noopener noreferrer"><img src="images/ubuntu.svg" alt="Ubuntu"></a></li>
